--- a/src/main/g8/src/main/latex/$name$.tex
+++ b/src/main/g8/src/main/latex/$name$.tex
@@ -19,11 +19,7 @@
   top=20mm,bottom=20mm}
 
 % Include other packages here, before hyperref.
-
-% If you comment hyperref and then uncomment it, you should delete
-% egpaper.aux before re-running latex.  (Or just hit 'q' on the first latex
-% run, let it finish, and you should be clear).
-\usepackage[breaklinks=true,bookmarks=false]{hyperref}
+\usepackage[breaklinks=true,bookmarks=false,hidelinks]{hyperref}
 
 % define line spread
 %\linespread{1.3}
